--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/sefailyasoz/.local/share/virtualenvs/Simple_LoginSignup-USXfqbc1/bin/python"
+    "python.pythonPath": "/Library/Frameworks/Python.framework/Versions/3.8/bin/python3"
 }
